feat: HTTP 요청 파싱과 세션 처리 기능 추가